# fastapi-sandbox

./: pyproject.toml  requirements.txt
.circleci/: main.yaml
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  provider.tf
tests/: test_app.py
