[tool.poetry]
name = "fastapi-sandbox"
version = "0.1.0"
description = ""
authors = ["Michael Fedell <michael.fedell@vastspace.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
httpx = "^0.27.0"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
